feat: add REST API for Jikkou (preview) (#301)
This commit provides a complete redesign of Jikkou's
core API in order to support REST capabilities to manage
resources.